--- a/css/css_index.css
+++ b/css/css_index.css
@@ -30,7 +30,7 @@
 }
 
 body {
-    background-color: #F5F5F5 !important;
+    background-color: #F0FEF2 !important;
 }
 
 hr {
@@ -91,8 +91,9 @@ h2{
     text-align: center;
 }
 
-p {
-    color: #000000 !important;
+p{
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 #lista{
