--- a/css/css_instalaciones.css
+++ b/css/css_instalaciones.css
@@ -35,9 +35,62 @@
 }
 
 
-#a:hover, #aRegistro:hover, #aLogin:hover, .dropdown-menu>li>a:hover, .dropdown:hover{
+#a:hover, #aRegistro:hover, #aLogin:hover, #aReservas:hover, .dropdown-menu>li>a:hover, .dropdown:hover{
     background-color: #264B2D !important;
     color: #FFFFFF !important;
+}
+
+.modal-header{
+    text-align: center;
+    background-color: #264B2D;
+    color : #FFFFFF;
+}
+
+.modal-body{
+     background-color: #F0FEF2;
+}
+
+#modal_buttons,#iniciar_sesion {
+    text-align: center;
+}
+
+#nuevo_usuario{
+    color: #264B2D !important;
+    font-size: 12px;
+}
+
+
+.input-group-addon{
+    color: #FFFFFF !important;
+    background-color:  #264B2D !important; 
+}
+
+.btn-default{
+    background-color: #264B2D !important;
+    color: #FFFFFF !important;
+    width: 30%;
+}
+
+.form-control {
+    border: 1px solid #264B2D !important;
+}
+
+
+#drag1 {
+    width: 20%;
+    height: 20%;
+    text-align: center !important;
+}
+
+#dragdrop{
+    text-align: center !important;
+}
+
+#div1 {
+    width: 100%;
+    height: 10%;
+    text-align: center !important;
+    border: 2.5px solid #264B2D !important;
 }
 
 body {
@@ -70,11 +123,17 @@ hr {
 
 .jumbotron {
     background-color: #B2DCBA !important;
-    border: 3px solid  red;
 }
 
 .col-md-4{
-    margin-top: 10%;
+    text-align: center;
+}
+
+#escudo{
+  width: 40%;
+  height: 20%;
+  margin-top: 5%;
+  margin-bottom: 10%;
 }
 
 #detalles{
@@ -83,6 +142,7 @@ hr {
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 5%;
+    text-align: justify;
 }
 
 #footer {
