--- a/css/css_index.css
+++ b/css/css_index.css
@@ -90,8 +90,8 @@ hr {
 
 #escudo{
     opacity: 0.9;
-    width: 80%;
-    height: 50%;
+    width: 70%;
+    height: auto;
 }
 
 .input-group-addon{
